cardeditor.css
/* initialize fonts */

@font-face {
	font-family: 'Bloons TD';
	src: url(../src/font/BloonsTD-Regular.ttf);
	font-weight: normal;
    font-style: normal;
}

@font-face {
	font-family: 'Source Sans 3 SemiBold';
	src: url(../src/font/SourceSans3-Semibold.ttf);
	font-weight: normal;
    font-style: normal;
}
@font-face
{
	font-family: 'Source Sans 3 MidItalics';
	src: url(../src/font/SourceSans3-MediumItalic.ttf);
	font-weight: normal;
	font-style: normal;
}

.form-flex {
	height:fit-content;
	display: flex;
	flex-wrap: wrap;
	border: 2px solid black;
	background-color: #f2f0e5;
	border-radius: 5%;
}

.form-element {
	padding: 0.5em 1em;
}

.img-btn {
	max-height: 96px;
	cursor: pointer;
	margin: 0.5em;
	border-radius: 10%;
}

.img-border {
	border: 1px solid black;
}

label {
	font-size: 1.5em;
	display: inline-block;
}
input[type="text"] {
	font-size: 1.5em;
	font-family: 'Source Sans 3 SemiBold';
	padding: 0;
	background-color: #E5E7F2;
	border: 1px solid black;
	border-radius: 10px;
}
select {
	font-size: 1.25em;
	font-family: 'Source Sans 3 SemiBold';
	padding: 0;
	background-color: #E5E7F2;
	border: 1px solid black;
	border-radius: 10px;
	width: 250px;
	height: 38.25px;
}
.copies-slider {
	width: 8em;
	cursor: pointer;
	margin: 1em 0em;
	accent-color: #E5E7F2;
}
.damage-checkbox {
	margin: 0em;
	height: 1.5em;
	width: 1.5em;
	font-size: 1.5em;
	outline: 1px solid black;
	accent-color: #E5E7F2 ;
}
textarea {
	resize: none;
	font-size: 1.5em;
	font-family: 'Source Sans 3 SemiBold';
	background-color: #E5E7F2;
	border: 1px solid black;
	border-radius: 10px;
}
input[type="file"] {
    display: none;
}
.label-btn {
	border: 1px solid #888;
	margin: 0;
	font-size: 1.5em;
	padding: 0.25em 0.5em;
	cursor: pointer;
	font-family: 'Source Sans 3 SemiBold';
	display: inline-block;
	background-color: #E5E7F2;
	border-radius: 10px;
}
.two-col {
	display: flex;
	flex-wrap: wrap;
	gap: 20px;
}

/* card image styles */
/* translate(-50%, -50%) for centering images  */
/* left top for where center is */
.card-container {
	width: 375px;
	height: 510px;
	display: flex;
	justify-content: center;
	position: absolute;
	top: 20%;
}
.card {
	max-width: 635px;
	max-height: 888px;
	position: absolute;
	user-select: none;
	pointer-events: none;
	transform: scale(50%) translate(0%, -50%);
	top: 35px;
}
.card-img {
	width: 92%;
  	height: 96%;
	transform: translate(-50%, 2.2%);
	left: 50%;
	object-fit: cover;
	position: absolute;
	border-radius: 10%;
	z-index: -1;
}
.card-border-circle {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 50%;
	top: 23%;
	visibility: hidden;
}
.cost {
	position: absolute;
	transform: translate(-50%, -50%);
	top: 4%
}
.coin1 {
	left: 9%;
	z-index: 3;
}
.coin2 {
	left: 15%;
	z-index: 2;
	visibility: hidden;
}
.coin3 {
	left: 21%;
	visibility: hidden;
}
.coinplus 
{
	left: 32%;
	visibility: hidden;
	z-index: 1;
}
.damage {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 90%;
	top: 4%
}
.ammo {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 90%;
	top: 25%
}
.delay {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 95.5%;
	top: 43%
}
.rarity-pin {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 50%;
	top: 96.5%
}
.hero-pin {
	position: absolute;
	transform: translate(-50%, -50%);
	left: 50%;
	top: 0%
}
.class-pin {
	position: absolute;
	transform: translate(-66.2%, 60%);
	left: 8%;
	top: 43%;
}
/* card text styles */
.bold-text {
	text-align: center;
	color: white;
	font-family: 'Bloons TD';
	/* text shadow is half as thick as it should be in preview */
	/* issue with html2canvas js package */
	/* solution is to use node js but then the hosting is another problem */
	-webkit-text-stroke: 0.03em black;
	text-shadow: 0em 0.07em black;
	word-wrap: break-word;
	margin: 0;
}
.title-text {
	position: absolute;
	font-size: 3.5em;
	left: 7.5%;
	width: 85%;
	max-height: 30%;
	bottom: 345px;
}
	.class-text {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 2.3em;
	left: 50%;
	top: 64%;
	width: 90%;
	max-height: 20%;
}
.cost-text {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 6em;
	left: 9%;
	top: 4%;
	z-index: 3;
}
.damage-text {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 6em;
	left: 90%;
	top: 4%;
}
.ammo-text {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 6em;
	left: 90%;
	top: 23%;
}
.delay-text {
	position: absolute;
	transform: translate(-50%, -50%);
	font-size: 4em;
	left: 95.5%;
	top: 43%;
}
.description-text {
	position: absolute;
	transform: translate(-50%, -30%);
	left: 50%;
	top: 70%;
	font-size: 2.7em;
	color: white;
	text-align: center;
	width: 90%;
	max-height: 28%;
}
.flavor-text {
	font-family: 'Source Sans 3 MidItalics';
	paint-order: stroke fill;
	position: absolute;
	transform: translate(-50%, 0%);
	left: 50%;
	font-size: 2.5em;
	color: white;
	text-align: center;
	width: 90%;
	max-height: 28%;
	top: 105%;
	-webkit-text-stroke: 0.03em black;
}
/* top level styles */
.two-col-item {
	flex: 1 1 calc(50% - 12px); /* 50% width for each column minus gap */
}

.card-two-col {
	align-items: center;
	display: flex;
	justify-content: center;
}

h1 {
	font-family: 'Bloons TD';
	font-size: 4em;
	margin: 0;
}
body {
	font-family: 'Source Sans 3 SemiBold';
	background-color: #E5E7F2;
}

